Bug 1743975 - Copy all POD fields in TransitiveCompileOptions::copyPODTransitiveOptions. r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D132680